# dukat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-vs2015.cmd  build-vs2017.cmd  build-vs2019.cmd
examples/android/: .gitignore  README.txt  settings.gradle
examples/android/app/src/main/cpp/: CMakeLists.txt  hellodukat.cpp  hellodukat.h
examples/assets/: collision.ini  flocking.ini  framebuffer.ini  fullscreenfx.ini  grid.ini  heatmap.ini  hello.ini  input.ini  layers.ini  lighting.ini  lighting2d.ini  mapgen.ini  modelviewer.ini  octree.ini  particles.ini  room.ini  scenes.ini  scrolling.ini  skydome.ini  sprites.ini  surface.ini  terrain.ini  text.ini  waves.ini
examples/collision/: CMakeLists.txt  collision.vcxproj  collision.vcxproj.filters  collisionapp.cpp  collisionapp.h  stdafx.cpp
examples/flocking/: CMakeLists.txt  boid.cpp  boid.h  flocking.vcxproj  flocking.vcxproj.filters  flockingapp.cpp  flockingapp.h
examples/framebuffer/: CMakeLists.txt  causticsscene.cpp  causticsscene.h  fractalscene.cpp  fractalscene.h  framebuffer.vcxproj  framebuffer.vcxproj.filters  framebufferapp.cpp  framebufferapp.h  ripplepondscene.cpp  ripplepondscene.h  stdafx.cpp  titlescene.cpp  titlescene.h
examples/fullscreenfx/: CMakeLists.txt  fullscreenfx.vcxproj  fullscreenfx.vcxproj.filters  fullscreenfxapp.cpp  fullscreenfxapp.h
examples/grid/: CMakeLists.txt  grid.vcxproj  grid.vcxproj.filters  gridapp.cpp  gridapp.h
examples/heatmap/: CMakeLists.txt  heatmap.cpp  heatmap.h  heatmap.vcxproj  heatmap.vcxproj.filters  heatmapapp.cpp  heatmapapp.h  heatmapapp2d.cpp  heatmapapp2d.h
examples/hello/: CMakeLists.txt  hello.vcxproj  hello.vcxproj.filters  hellodukat.cpp  hellodukat.h  stdafx.cpp
examples/input/: CMakeLists.txt  input.vcxproj  input.vcxproj.filters  inputapp.cpp  inputapp.h  stdafx.h  targetver.h
examples/layers/: CMakeLists.txt  layers.vcxproj  layers.vcxproj.filters  layersapp.cpp  layersapp.h  stdafx.cpp
examples/lighting/: CMakeLists.txt  lighting.vcxproj  lighting.vcxproj.filters  lightingapp.cpp  lightingapp.h  stdafx.cpp
examples/lighting2d/: CMakeLists.txt  lighting2d.vcxproj  lighting2d.vcxproj.filters  lighting2dapp.cpp  lighting2dapp.h  stdafx.cpp
examples/mapgen/: CMakeLists.txt  hexmap.cpp  hexmap.h  mapgen.vcxproj  mapgen.vcxproj.filters  mapgenapp.cpp  mapgenapp.h  mapgenerator.cpp  mapgenerator.h  mapgraph.cpp  mapgraph.h  mapshape.h  stdafx.cpp  stdafx.h  voronoi.cpp  voronoi.h
examples/modelviewer/: CMakeLists.txt  model3.cpp  model3.h  modelconverter.h  modelviewer.cpp  modelviewer.h  modelviewer.vcxproj  modelviewer.vcxproj.filters  ms3dmodel.cpp  ms3dmodel.h  stdafx.cpp
examples/octree/: CMakeLists.txt  entity.cpp  entity.h  octree.vcxproj  octree.vcxproj.filters  octreeapp.cpp  octreeapp.h  octreebuilder.cpp  octreebuilder.h  raycamera3.h  stdafx.cpp  stdafx.h
examples/particles/: CMakeLists.txt  particles.cpp  particles.h  particles.vcxproj  particles.vcxproj.filters  stdafx.cpp  stdafx.h
examples/room/: CMakeLists.txt  ReadMe.txt  firstpersoncamera.cpp  firstpersoncamera.h  room.vcxproj  room.vcxproj.filters  roomapp.cpp  roomapp.h  roomcamera.cpp  roomcamera.h  stdafx.cpp
examples/scenes/: CMakeLists.txt  dialogscene.cpp  dialogscene.h  gamescene.cpp  gamescene.h  scenes.cpp  scenes.filters  scenes.vcxproj  scenes.vcxproj.filters  stdafx.cpp  textbutton.cpp  textbutton.h  titlescene.cpp  titlescene.h
examples/scrolling/: CMakeLists.txt  scrolling.vcxproj  scrolling.vcxproj.filters  scrollingapp.cpp  scrollingapp.h  stdafx.cpp
examples/skydome/: CMakeLists.txt  skydome.vcxproj  skydome.vcxproj.filters  skydomeapp.cpp  skydomeapp.h  stdafx.cpp  stdafx.h
examples/sprites/: CMakeLists.txt  ReadMe.txt  sprites.vcxproj  sprites.vcxproj.filters  spritesapp.cpp  spritesapp.h  stdafx.cpp  stdafx.h
examples/surface/: CMakeLists.txt  ReadMe.txt  stdafx.cpp  stdafx.h  surface.vcxproj  surface.vcxproj.filters  surfaceapp.cpp  surfaceapp.h
examples/terrain/: CMakeLists.txt  stdafx.cpp  stdafx.h  terrain.vcxproj  terrain.vcxproj.filters  terrainapp.cpp  terrainapp.h  terraincamera.cpp  terraincamera.h
examples/text/: CMakeLists.txt  ReadMe.txt  stdafx.cpp  stdafx.h  text.cpp  text.h  text.vcxproj  text.vcxproj.filters
examples/waves/: CMakeLists.txt  stdafx.cpp  stdafx.h  wavemesh.h  waves.vcxproj  waves.vcxproj.filters  wavesapp.cpp  wavesapp.h
include/dukat/: aabb2.h  aabb3.h  animation.h  animationmanager.h  animationsequence.h  application.h  assetloader.h  audiocache.h  audiomanager.h  bit.h  bitmapfont.h  blockbuilder.h  boundingbody2.h  boundingbody3.h  boundingcircle.h  boundingsphere.h  box2deffect2.h  buffers.h  camera2.h  camera3.h  cameraeffect2.h  causticseffect2.h  circularbuffer.h  (+112 more)
src/: CMakeLists.txt  ReadMe.txt  aabb2.cpp  aabb3.cpp  animationmanager.cpp  animationsequence.cpp  application.cpp  assetloader.cpp  audiocache.cpp  audiomanager.cpp  bit.cpp  bitmapfont.cpp  blockbuilder.cpp  boundingcircle.cpp  boundingsphere.cpp  box2deffect2.cpp  box2dmanager.cpp  buffers.cpp  camera2.cpp  camera3.cpp  causticseffect2.cpp  clipmap.cpp  collisionmanager2.cpp  color.cpp  dds.cpp  debugeffect2.cpp  devicemanager.cpp  diamondsquaregenerator.cpp  dither.cpp  draw.cpp  effectpass.cpp  environment.cpp  eulerangles.cpp  executor.cpp  feedback.cpp  firstpersoncamera3.cpp  fixedcamera3.cpp  fontcache.cpp  fullscreeneffect2.cpp  game2.cpp  (+71 more)
src/dukat/: CMakeLists.txt  ReadMe.txt  aabb2.cpp  aabb2.h  aabb3.cpp  aabb3.h  animation.h  animationmanager.cpp  animationmanager.h  application.cpp  application.h  assetloader.cpp  audiocache.cpp  audiocache.h  audiomanager.cpp  audiomanager.h  blockbuilder.cpp  blockbuilder.h  boundingbody2.h  boundingbody3.h  boundingsphere.cpp  boundingsphere.h  box2dmanager.cpp  box2dmanager.h  buffers.cpp  buffers.h  bytestream.h  camera2.cpp  camera2.h  camera3.cpp  camera3.h  clipmap.cpp  clipmap.h  collisionmanager2.cpp  collisionmanager2.h  color.h  component.h  controller.h  dds.cpp  dds.h  (+153 more)
util/: build-package.cmd
vs2015/: dukat.sln  dukat.vcxproj  dukat.vcxproj.filters
(+219 files in other folders)
