add_library(dukat STATIC aabb2.cpp aabb3.cpp animationmanager.cpp application.cpp boundingsphere.cpp
    buffers.cpp camera2.cpp camera3.cpp dds.cpp devicemanager.cpp eulerangles.cpp firstpersoncamera3.cpp
    game2.cpp game3.cpp gamebase.cpp gamepaddevice.cpp geometry.cpp inputdevice.cpp keyboarddevice.cpp 
    log.cpp mathutil.cpp matrix4.cpp mesh.cpp meshbuilder2.cpp meshbuilder3.cpp meshcache.cpp meshgroup.cpp 
    meshinstance.cpp messenger.cpp obb2.cpp particlemanager.cpp perfcounter.cpp quaternion.cpp ray3.cpp renderer.cpp 
    renderer2.cpp renderer3.cpp renderlayer2.cpp settings.cpp shadercache.cpp shaderprogram.cpp sprite.cpp
    stdafx.cpp surface.cpp sysutil.cpp textmeshbuilder.cpp textmeshinstance.cpp texturecache.cpp 
    timermanager.cpp transform3.cpp vector2.cpp vector3.cpp voxmodel.cpp window.cpp xboxdevice.cpp)