add_library(dukat STATIC aabb2.cpp aabb3.cpp animationmanager.cpp application.cpp blockbuilder.cpp boundingsphere.cpp
    buffers.cpp camera2.cpp camera3.cpp clipmap.cpp dds.cpp devicemanager.cpp diamondsquaregenerator.cpp environment.cpp eulerangles.cpp 
    firstpersoncamera3.cpp fixedcamera3.cpp game2.cpp game3.cpp gamebase.cpp gamepaddevice.cpp geometry.cpp gridmesh.cpp heightmap.cpp 
    inputdevice.cpp keyboarddevice.cpp log.cpp mapgraph.cpp mathutil.cpp matrix2.cpp matrix4.cpp meshbuilder2.cpp meshbuilder3.cpp 
    meshcache.cpp meshdata.cpp meshgroup.cpp meshinstance.cpp messenger.cpp model3.cpp ms3dmodel.cpp obb2.cpp orbitcamera3.cpp 
	particlemanager.cpp perfcounter.cpp quaternion.cpp 
    ray3.cpp renderer.cpp renderer2.cpp renderer3.cpp renderlayer2.cpp scene2.cpp settings.cpp shadercache.cpp shaderprogram.cpp sprite.cpp
    stdafx.cpp surface.cpp sysutil.cpp textmeshbuilder.cpp textmeshinstance.cpp texturecache.cpp texture.cpp textureutil.cpp
    timermanager.cpp transform3.cpp uimanager.cpp wavemesh.cpp vector2.cpp vector3.cpp voronoi.cpp voxmodel.cpp window.cpp xboxdevice.cpp)